@@ -1,24 +1,39 @@
 # SE_Final-Project_Event-Booking-System
 
-JAVAFX VM
---module-path "C:\Program Files\Java\javafx-sdk-24\lib" --add-modules javafx.controls,javafx.fxml --enable-native-access=javafx.graphics --enable-native-access=ALL-UNNAMED
+## Product Backlog Sprint 2
 
-/*
-public static List<String> getItemTypes() {
-List<String> itemTypes = FXCollections.observableArrayList();
-String query = "SELECT type_name FROM item_types";
+<ins>**Event page**</ins>  
+- [ ] Seating - All the stuff that goes with this  
+- [ ] Take me to checkout button  
+- [ ] Google Calendar API  
+- [ ] User Profile button  
+      
+<ins>**Checkout Screen**</ins>  
+- [ ] List of seats in cart  
+- [ ] Conformation screen (simple text box saying it was purchased)  
+      
+<ins>**User Profile**</ins>  
+- [ ] Add Name  
+- [ ] Add Location  
+- [ ] User Profile Pic  
+- [ ] CC Info  
+- [ ] My Events  
+      
+<ins>**Admin Screen**</ins>  
+- [ ] Venue Manager  
+- [ ] Venue Class  
+      
+<ins>**Login Screen**</ins>  
+- [ ] Password Requirements (1 Cap, 1 lower, 1 num, 1 special)  
+      
+<ins>**Database**</ins>  
+- [x] Add Venue  
+- [x] Add Join Venue-Event (Just a venue FK in Event_List)  
+- [x] Update Bookings   
+- [x] Add Table for Images  
 
-        try (Connection conn = DatabaseConnection.getConnection();
-             PreparedStatement stmt = conn.prepareStatement(query);
-             ResultSet rs = stmt.executeQuery()) {
-
-            while (rs.next()) {
-                itemTypes.add(rs.getString("type_name"));
-            }
-
-        } catch (SQLException e) {
-            e.printStackTrace();
-        }
-        return itemTypes;
-    }
-*/
+<ins>**Other**</ins>  
+- [ ] HELP BUTTON FOR EVERY SCREEN (video later)  
+- [ ] Green-Black Colors
+- [ ] Left Buttons Right Everything Else
+- [ ] Main Screen (Company Logo, Buttons to login, guest login, etc.)  
